<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.tommasoberlose.shutup.ui.MainActivity">
    <com.narayanacharya.waveview.WaveView
        android:id="@+id/waveView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:waveAmplitude="8.25"
        app:waveBackgroundColor="@color/backgroundColor"
        app:waveColor="@color/colorPrimary"
        app:waveDensity="3.0"
        app:waveFrequency="1.0"
        app:waveNumberOfWaves="5"
        app:wavePhaseShift="-0.05"
        app:wavePrimaryLineWidth="3.0"
        app:waveSecondaryLineWidth="1.0"
        app:waveXAxisPositionMultiplier="0.8"
        android:layout_above="@+id/main_container" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="41dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_action_menu"
        android:id="@+id/action_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="24dp"
        android:background="@color/colorPrimary"
        android:id="@+id/main_container"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginLeft="4dp"
            style="@style/ActivityTitle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="4dp"
            android:text="@string/main_subtitle"
            style="@style/ActivitySubtitle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/action_configure"
            android:foreground="?android:selectableItemBackground"
            android:background="@drawable/button_background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceButton"
                android:textColor="@drawable/button_text_color"
                android:duplicateParentState="true"
                android:text="@string/action_configure"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/config_layout"
        android:visibility="invisible"
        android:elevation="5dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="56dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/config_description"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginBottom="24dp"
                    style="@style/Settings.Title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_audio"
                    android:id="@+id/action_stream_audio"
                    style="@style/Settings.ListItem" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_music"
                    android:id="@+id/action_stream_music"
                    style="@style/Settings.ListItem" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_notification"
                    android:id="@+id/action_stream_notification"
                    style="@style/Settings.ListItem" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_ring"
                    android:id="@+id/action_stream_ring"
                    style="@style/Settings.ListItem" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_system"
                    android:id="@+id/action_stream_system"
                    style="@style/Settings.ListItem" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_voice_call"
                    android:id="@+id/action_stream_voice_call"
                    style="@style/Settings.ListItem" />
            </LinearLayout>
        </ScrollView>
        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="8dp"
            android:id="@+id/action_close_config"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_action_close"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="16dp"
            android:foreground="?android:selectableItemBackgroundBorderless"/>
    </RelativeLayout>
</RelativeLayout>
