<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_author"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/black"
            android:src="@drawable/ic_action_android"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_author"
            style="@style/Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_project"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/black"
            android:src="@drawable/ic_action_github"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_code"
            style="@style/Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:textSize="14sp"
        android:id="@+id/action_rate"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/black"
            android:src="@drawable/ic_action_rate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_rate"
            style="@style/Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_feedback"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/black"
            android:src="@drawable/ic_action_feedback"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_feedback"
            style="@style/Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_share"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/black"
            android:src="@drawable/ic_action_share"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            style="@style/Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</LinearLayout>